# CplusplusPractise

./: .gitignore
CPP_Lessons/: .gitignore
CPP_Lessons/.devcontainer/: Dockerfile  Dockerfile_2020  devcontainer.json
CPP_Lessons/Lesson1/: CMakeLists.txt  CMakeLists.txt.old1  Makefile  binary_search.cpp  hello.cpp  merge_sort.cpp  merge_sort.h  quick_sort.h  quick_sort.tpp  quick_sort_test.cpp  search.h
DEMO_CMAKE/macbuild/: CMakeCache.txt  cmake_install.cmake
DEMO_CMAKE/macbuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
DEMO_CMAKE/macbuild/ComplexNumber/: cmake_install.cmake
DEMO_CMAKE/macbuild/ComplexNumber/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
DEMO_CMAKE/macbuild/ComplexNumber/ComplexNumber.xcodeproj/: project.pbxproj
DEMO_CMAKE/macbuild/ComplexNumber/Debug/: ComplexNumber
DEMO_CMAKE/macbuild/ComplexNumber/Project.build/Debug/ComplexNumber.build/: dgph  dgph~
DEMO_CMAKE/macbuild/ComplexNumber/Project.build/Debug/ComplexNumber.build/Objects-normal/x86_64/: ComplexNumber.LinkFileList  ComplexNumber.d  main.d  main.dia
DEMO_CMAKE/macbuild/HelloWorld/: cmake_install.cmake
DEMO_CMAKE/macbuild/HelloWorld/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
DEMO_CMAKE/macbuild/HelloWorld/Debug/: HelloWorldTutorial
DEMO_CMAKE/macbuild/HelloWorld/HelloWorld.xcodeproj/: project.pbxproj
DEMO_CMAKE/macbuild/HelloWorld/Project.build/Debug/HelloWorldTutorial.build/: dgph  dgph~
DEMO_CMAKE/macbuild/HelloWorld/Project.build/Debug/HelloWorldTutorial.build/Objects-normal/x86_64/: HelloWorldTutorial.LinkFileList
DEMO_CMAKE/macbuild/HelloWorld/Project.build/Debug/HelloWorldTutorial.build/StaticAnalyzer/Project/HelloWorldTutorial/normal/x86_64/: main.d
DEMO_CMAKE/macbuild/Project.build/Debug/ALL_BUILD.build/: Script-E0EB9454E51045259A5A1628.sh  dgph  dgph~
DEMO_CMAKE/macbuild/Project.build/Debug/ZERO_CHECK.build/: Script-A3806BBDEF5D4FDCB2035BDE.sh  dgph  dgph~
DEMO_CMAKE/macbuild/Project.build/Release/ALL_BUILD.build/: dgph
DEMO_CMAKE/macbuild/Project.build/Release/ZERO_CHECK.build/: dgph  dgph~
DEMO_CMAKE/macbuild/Project.xcodeproj/: project.pbxproj
DEMO_CMAKE/macbuild/Project.xcodeproj/project.xcworkspace/xcuserdata/dexter.xcuserdatad/: UserInterfaceState.xcuserstate
DEMO_CMAKE/macbuild/Project.xcodeproj/xcuserdata/dexter.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
DEMO_CMAKE/macbuild/Project.xcodeproj/xcuserdata/dexter.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  HelloWorldTutorial.xcscheme  xcschememanagement.plist
DEMO_CMAKE/pgm/: CMakeLists.txt
DEMO_CMAKE/pgm/ComplexNumber/: CMakeLists.txt  ComplexNumber.cpp  main.cpp
DEMO_CMAKE/pgm/ComplexNumber/include/: ComplexNumber.h
DEMO_CMAKE/pgm/HelloWorld/: CMakeLists.txt  main.cpp
PractiseCMake/: BraceInitialization.cpp  CMakeLists.txt  DelegateConstructor.cpp  MoveConstructor.cpp  Pet.cpp  Readme.md  main.cpp  testclass.cpp
PractiseCMake/include/: CplusplusFeatureTest.h  MoveConstructor.h  Pet.h
